// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses and scrapes HTML correctly 1`] = `
Object {
  "tom-hanks": "complete",
}
`;

exports[`parses and scrapes HTML correctly 2`] = `
Object {
  "olivia-wilde": "low-priority",
}
`;
